--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.datasource.url = C:/Users/Alexa/IdeaProjects/Laboratories-System/demo/src/database/mv.db.h2.db
+spring.datasource.driverClassName = org.h2.Driver
+spring.datasource.username = user
+spring.datasource.password=12345
+server.port=8081
