--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-spring.datasource.url = C:/Users/Alexa/IdeaProjects/Laboratories-System/demo/src/database/mv.db.h2.db
-spring.datasource.driverClassName = org.h2.Driver
-spring.datasource.username = user
-spring.datasource.password=12345
-server.port=8081
+spring.datasource.url=jdbc:h2:/home/andrew/git/lab-university-db/src/db/lab
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=admin
+spring.datasource.password=1234
