--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:h2:/home/andrew/git/lab-university-db/src/db/lab
+spring.datasource.url=jdbc:h2:file:C:/Users/User/IdeaProjects/demo/src/db/lab
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=admin
 spring.datasource.password=1234
